adventure/index.css
#title {
    font-size: 45px;
    padding-bottom: 15px;
    color: Orange;
    text-align:center;
}

body { 
    font-family: Arial, sans-serif; 
    padding: 2em; 
    background: #111; 
    color: #eee;
    height: 100%;
    margin: 0;
    text-align:center;
}

.page-container {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
}

#title-container {
  position: relative;
  display: inline-block;
}

#hatch-anchor {
  position: relative;
  display: inline-block;
}

#secret-zone {
  position: absolute;
  top: -10px;
  left: -12px;
  width: 2px;
  height: 2px;
  opacity:0;
  z-index: 9999;
}

main {
  flex: 1;
  padding: 2em;
}

#question {
    font-size: 25px;
    color:darkorange;
}

button { 
    margin: 0.5em;
    margin-top: 55px;
    margin-right: 30px;
    padding: 0.5em 1em; 
    font-size: 1em; 
    background: #444; 
    color: orange; 
    border: none; 
    cursor: pointer;
    border-radius: 5px;
}

    
button:hover { 
    background: #666;
    color: white; 
}
    
#game-image {
  justify-content: left;
}

pre { 
    white-space: pre-wrap; 
}

footer {
    color:orange;
    text-align: center;
    padding: 1em;
}

